--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="..//event/index.css">
+  <link rel="stylesheet" href="index.css">
 
   </head>
 
