--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </a>
   </section>
 
-  <script src="..//event/index.js"></script>
+  <script src="index.js"></script>
 
   <footer>
     <p>SEE YOU IN THE EVENT <br>LET'S BLAST!</p>
