--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </a>
       </div>
       <div class="hero-image">
-        <img src="..//event/event logo.jpeg" alt="Event Logo" class="disco-border">
+        <img src="event logo.jpeg" alt="Event Logo" class="disco-border">
       </div>
     </div>
   </section>
@@ -92,24 +92,24 @@
     <h3>Meet Our Speakers</h3>
     <div class="speakers-grid">
         <div class="card">
-            <img src="..//event/host.jpeg" alt="Prabhas" class="speaker-img" height="150px" width="150px">
+            <img src="host.jpeg" alt="Prabhas" class="speaker-img" height="150px" width="150px">
             <h1>Prabhas Reddy</h4>
             <p>Student/ founder of Reddy Groups</p>
             <a href="https://www.instagram.com/prabhas_reddy_159" target="_blank">Instagram</a>
         </div>
       <div class="card">
-        /<img src="..//event/mvp.jpeg" alt="Lakshith patil" class="speaker-img" height="150px" width="150px">
+        /<img src="mvp.jpeg" alt="Lakshith patil" class="speaker-img" height="150px" width="150px">
         <h4>Lakshith patil</h4>
         <p>Microsoft MVP</p>
       </div>
       <div class="card">
-        <img src="..//event/harshith.jpeg" alt="Harshith" class="speaker-img" height="150px" width="150px">
+        <img src="harshith.jpeg" alt="Harshith" class="speaker-img" height="150px" width="150px">
         <h4>Harshith</h4>
         <p>LinkedIn TopVoice</p>
         <a href="https://www.instagram.com/harshith.presents" target="_blank">Instagram</a>
       </div>
       <div class="card">
-        <img src="..//event/swaroop.jpeg" alt="Swaroop" class="speaker-img" height="150px" width="150px">
+        <img src="swaroop.jpeg" alt="Swaroop" class="speaker-img" height="150px" width="150px">
         <h4>Swaroop</h4>
         <p>Content Creater</p>
         <a href="https://www.instagram.com/codewithswaroop" target="_blank">Instagram</a>
@@ -117,19 +117,19 @@
     </div>
     <div class="speakers-grid">
       <div class="card">
-        <img src="..//event/nihar.jpeg" alt="Niharr" class="speaker-img" height="150px" width="150px">
+        <img src="nihar.jpeg" alt="Niharr" class="speaker-img" height="150px" width="150px">
         <h4>Niharr</h4>
         <p>Founder of mass coders and content creator</p>
         <a href="https://www.instagram.com/niihaaarrrr" target="_blank">Instagram</a>
       </div>
       <div class="card">
-        <img src="..//event/harsha.jpeg" alt="Harsha" class="speaker-img" height="150px" width="150px">
+        <img src="harsha.jpeg" alt="Harsha" class="speaker-img" height="150px" width="150px">
         <h4>HarshaVardhan</h4>
         <p>Content Creator</p>
         <a href="https://www.instagram.com/harsha_verse" target="_blank">Instagram</a>
       </div>
       <div class="card">
-        <img src="..//event/vasanth.jpeg" alt="Vasanth kumar" class="speaker-img" height="150px" width="150px">
+        <img src="vasanth.jpeg" alt="Vasanth kumar" class="speaker-img" height="150px" width="150px">
         <h4>Vasanth kumar</h4>
         <p>Content Creator</p>
         <a href="https://www.instagram.com/gurucodes.dev" target="_blank">Instagram</a>
